--- a/ui/src/app/job-detail/job-detail.component.html
+++ b/ui/src/app/job-detail/job-detail.component.html
@@ -1,5 +1,8 @@
 <p>JobId: {{job.jobId}}</p>
 <p>Engineer: {{job.engineer}}</p>
 <p>When: {{job.when | date:'shortDate'}}</p>
+<p>CustomerName: {{job.customerName}}</p>
+<p>CustomerType: {{job.customerType}}</p>
+
 
 <a [routerLink]="['/jobs']">Back</a>
