--- a/ui/src/app/job/job.component.html
+++ b/ui/src/app/job/job.component.html
@@ -6,9 +6,18 @@
     <option *ngFor="let engineer of engineers">{{engineer}}</option>
   </select>
   <small *ngIf="engineer.invalid">Please select an engineer</small>
+
   <label for="when">When</label>
   <input type="date" name="when" ngModel required #when="ngModel" [(ngModel)]="newJob.when" />
   <small *ngIf="when.invalid">Please select a valid date</small>
+
+  <label for="customer">Customer</label>
+  <select name="customer" required #customer="ngModel" ngModel placeholder="Please select" [(ngModel)]="newJob.customerId">
+    <option [ngValue]="null" selected>Please select</option>
+    <option [ngValue]="customer.customerId" *ngFor="let customer of customers">{{customer.name}}</option>
+  </select>
+  <small *ngIf="customer.invalid">Please select a customer</small>
+
   <button type="submit" [disabled]="jobForm.invalid">Add Job</button>
 </form>
 
@@ -18,6 +27,7 @@
     <tr>
       <th>Engineer</th>
       <th>When</th>
+      <th>Customer</th>
       <th></th>
     </tr>
   </thead>
@@ -25,6 +35,7 @@
     <tr *ngFor="let job of jobs">
       <td>{{job.engineer}}</td>
       <td>{{job.when | date:'shortDate'}}</td>
+      <td>{{job.customerName}}</td>
       <td>
         <a [routerLink]="['/job', job.jobId]">Open</a>
       </td>
